feat(notebook): searchable technician ComboBox + shipment list fixes
- Replace plain Select/TextInput technician field with searchable Carbon ComboBox
  in both NoteBookEntryForm and NoteBookInstanceEntryForm
- Resolve selected technician from live users list by ID (prevents stale name display)
- Add shouldFilterItem for real-time case-insensitive search
- Fix shipment list error handling and search in ShipmentListTable
- Add i18n keys for technician search placeholder (en + fr)

Co-authored-by: Cursor <cursoragent@cursor.com>